# alpha_encoding_lib

./: Cargo.toml
src/: ast.rs  chromosome.rs  features.rs  gene.rs  lib.rs  main.rs  traits.rs
src/data/: types.rs
