[package]
name = "alpha_encoding_ast"
version = "0.1.0"
edition = "2021"


[dependencies]
anyhow = "1.0.82"
async-trait = "0.1.80"
csv = "1.3.0"
diesel = {version = "2.1.5", features = ["postgres", "serde_json", "r2d2"]}
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
tokio = { version = "1.37.0", features = ["full"] }
